- .teleport <mapName> now works without disconnect (maps from database) - added test object at Tortage Beach for testing. Using object will teleport you to GM Island

--- a/projects/vs2010/WorldServer/WorldServer.vcxproj
+++ b/projects/vs2010/WorldServer/WorldServer.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="..\..\..\src\WorldServer\AgentServerHandler.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\AgentServerMessages.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\CharStatsHandler.cpp" />
+    <ClCompile Include="..\..\..\src\WorldServer\loadWorldHandler.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\CharAction.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\CharMovement.cpp" />
     <ClCompile Include="..\..\..\src\WorldServer\PassBlobs\DeleteItem.cpp" />
