--- a/src/Tools/LibFaolanCompression/LibFaolanCompression.vcxproj
+++ b/src/Tools/LibFaolanCompression/LibFaolanCompression.vcxproj
@@ -43,14 +43,14 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)..\bin\$(Configuration)\Tools\</OutDir>
+    <OutDir>$(SolutionDir)..\..\bin\$(Configuration)\Tools\</OutDir>
     <IntDir>obj\$(Configuration)\</IntDir>
     <IncludePath>$(IncludePath)</IncludePath>
     <LibraryPath>zlib\$(PlatformTarget)\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)..\bin\$(Configuration)\Tools\</OutDir>
+    <OutDir>$(SolutionDir)..\..\bin\$(Configuration)\Tools\</OutDir>
     <IntDir>obj\$(Configuration)\</IntDir>
     <IncludePath>$(IncludePath)</IncludePath>
     <LibraryPath>zlib\$(PlatformTarget)\;$(LibraryPath)</LibraryPath>
