--- a/src/LibFaolan/LibFaolan.csproj
+++ b/src/LibFaolan/LibFaolan.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,30 +10,21 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LibFaolan</RootNamespace>
     <AssemblyName>LibFaolan</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>3ceb108a</NuGetPackageImportStamp>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>$(SolutionDir)..\bin\$(Configuration)\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>$(SolutionDir)..\bin\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -47,10 +38,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Numerics.Vectors, Version=1.1.6.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\System.Numerics.Vectors.1.1.6-beta\lib\portable-net45+win8\System.Numerics.Vectors.dll</HintPath>
-    </Reference>
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
@@ -59,27 +46,23 @@
     <Compile Include="Crypt\Crc32.cs" />
     <Compile Include="Database\IDatabase.cs" />
     <Compile Include="Database\MySqlDatabase.cs" />
-    <Compile Include="Data\ConanAccount.cs" />
+    <Compile Include="Data\Account.cs" />
     <Compile Include="Data\ConanArray.cs" />
-    <Compile Include="Data\ConanCharacter.cs" />
-    <Compile Include="Data\ConanRealm.cs" />
+    <Compile Include="Data\Character.cs" />
+    <Compile Include="Data\Realm.cs" />
     <Compile Include="Extentions\ArrayExtentions.cs" />
     <Compile Include="Extentions\DictionaryExtentions.cs" />
     <Compile Include="Extentions\ToHexExtentions.cs" />
-    <Compile Include="Functions.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="DllImport.cs" />
-    <Compile Include="Network\Conan\ConanPacket.cs" />
-    <Compile Include="Network\Internal\InternalConnection.cs" />
-    <Compile Include="Network\Internal\InternalOpcodes.cs" />
-    <Compile Include="Network\Internal\InternalPacket.cs" />
-    <Compile Include="Network\Shared\NetworkClient.cs" />
-    <Compile Include="Network\Shared\Packet.cs" />
-    <Compile Include="Network\Shared\PacketBuffer.cs" />
-    <Compile Include="Network\Shared\ProtocolFactory.cs" />
-    <Compile Include="Network\Shared\Server.cs" />
-    <Compile Include="Network\Shared\WireProtocol.cs" />
-    <Compile Include="PacketUtills.cs" />
+    <Compile Include="Math\Vector3.cs" />
+    <Compile Include="Other\Functions.cs" />
+    <Compile Include="Other\Logger.cs" />
+    <Compile Include="DllImport\DllImport.cs" />
+    <Compile Include="Network\Packet.cs" />
+    <Compile Include="Network\NetworkClient.cs" />
+    <Compile Include="Network\ConanStream.cs" />
+    <Compile Include="Network\Server.cs" />
+    <Compile Include="Network\WireProtocol.cs" />
+    <Compile Include="Other\PacketUtills.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
