--- a/src/Servers/GameServer/GameServer.csproj
+++ b/src/Servers/GameServer/GameServer.csproj
@@ -9,25 +9,16 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GameServer</RootNamespace>
     <AssemblyName>GameServer</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>$(SolutionDir)..\bin\$(Configuration)\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>true</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>$(SolutionDir)..\bin\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
@@ -44,13 +35,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ALotOfPackets.cs" />
-    <Compile Include="ALotOfPackets2.cs" />
+    <Compile Include="Packets\Handle0xf98e10b3.cs" />
+    <Compile Include="Packets\Handle0xa36d3b74.cs" />
+    <Compile Include="Packets\HandleNewCharacter.cs" />
     <Compile Include="Opcodes.cs" />
     <Compile Include="GameServerListener.cs" />
-    <Compile Include="Ox2000.cs" />
-    <Compile Include="Packets.cs" />
+    <Compile Include="Packets\Handle0x2000.cs" />
+    <Compile Include="Packets\Packets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Packets\Send0x200A.cs" />
+    <Compile Include="Packets\Send0x2000.cs" />
+    <Compile Include="Packets\Send0x201C.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
