- Fix character name - Removed ConanArray - Pulled in the Vector3 from monogame.net - Cleanup database - Cleanup ConanStream

--- a/other/faolan.ini
+++ b/other/faolan.ini
@@ -17,7 +17,7 @@ CharacterSlots=4
 
 MySqlAddress=127.0.0.1
 MySqlPort=3311
-MySqlDatabase=faolan
+MySqlDatabase=projectfaolan
 MySqlUsername=root
 MySqlPassword=root
 
