--- a/src/Servers/GameServer/GameServer.csproj
+++ b/src/Servers/GameServer/GameServer.csproj
@@ -42,6 +42,7 @@
     <Compile Include="GameServerListener.cs" />
     <Compile Include="Packets\Handle0x2000.cs" />
     <Compile Include="Packets\Packets.cs" />
+    <Compile Include="Packets\SpawnPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Packets\Send0x200A.cs" />
     <Compile Include="Packets\Send0x2000.cs" />
