--- a/src/Servers/UniverseAgent/UniverseAgent.csproj
+++ b/src/Servers/UniverseAgent/UniverseAgent.csproj
@@ -31,7 +31,7 @@
   <ItemGroup>
     <Reference Include="Scs, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\SCS.1.1.0.1\lib\net40\Scs.dll</HintPath>
+      <HintPath>..\..\..\other\Scs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,9 +47,6 @@
       <Project>{7F7D3248-4432-4E7B-9CFD-25982668AD5B}</Project>
       <Name>LibFaolan</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
