--- a/src/Servers/AgentServer/AgentServer.csproj
+++ b/src/Servers/AgentServer/AgentServer.csproj
@@ -30,8 +30,9 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Scs">
-      <HintPath>..\..\packages\SCS.1.1.0.1\lib\net40\Scs.dll</HintPath>
+    <Reference Include="Scs, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\other\Scs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -40,9 +41,6 @@
     <Compile Include="Opcodes.cs" />
     <Compile Include="AgentServerListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\LibFaolan\LibFaolan.csproj">
