--- a/src/Servers/GameServer/GameServer.csproj
+++ b/src/Servers/GameServer/GameServer.csproj
@@ -28,28 +28,27 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Scs">
-      <HintPath>..\..\packages\SCS.1.1.0.1\lib\net40\Scs.dll</HintPath>
+    <Reference Include="Scs, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\other\Scs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Packets\Send0x2000_Packets.cs" />
     <Compile Include="Packets\Handle0xf98e10b3.cs" />
-    <Compile Include="Packets\Handle0xa36d3b74.cs" />
+    <Compile Include="Packets\HandleCommandPacket.cs" />
     <Compile Include="Packets\HandleNewCharacter.cs" />
     <Compile Include="Opcodes.cs" />
     <Compile Include="GameServerListener.cs" />
     <Compile Include="Packets\Handle0x2000.cs" />
     <Compile Include="Packets\Packets.cs" />
-    <Compile Include="Packets\SpawnPlayer.cs" />
+    <Compile Include="Packets\Send0x2000_SendSpawnNPCAndPlayersTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Packets\Send0x200A.cs" />
-    <Compile Include="Packets\Send0x2000.cs" />
     <Compile Include="Packets\Send0x201C.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="SenderReceivers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\LibFaolan\LibFaolan.csproj">
