--- a/src/Servers/PlayerAgent/PlayerAgent.csproj
+++ b/src/Servers/PlayerAgent/PlayerAgent.csproj
@@ -28,8 +28,9 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Scs">
-      <HintPath>..\..\packages\SCS.1.1.0.1\lib\net40\Scs.dll</HintPath>
+    <Reference Include="Scs, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\other\Scs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -39,9 +40,6 @@
     <Compile Include="Packets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PlayerAgentListener.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\LibFaolan\LibFaolan.csproj">
