--- a/other/faolan.ini
+++ b/other/faolan.ini
@@ -21,3 +21,4 @@ MySqlDatabase=projectfaolan
 MySqlUsername=root
 MySqlPassword=root
 
+WelcomeString=Welcome to Project Faolan!<br />Build on: $BuildDate$<br />Git rev: $BuildHash$
