--- a/src/Servers/AgentServer/AgentServer.csproj
+++ b/src/Servers/AgentServer/AgentServer.csproj
@@ -32,15 +32,20 @@
   <ItemGroup>
     <Reference Include="Scs, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\other\Scs.dll</HintPath>
+      <HintPath>..\..\Scs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgentServerWireProtocol.cs" />
+    <Compile Include="Functions.cs" />
     <Compile Include="Opcodes.cs" />
     <Compile Include="AgentServerListener.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\..\LibFaolan\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="AgentServerPacket.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\LibFaolan\LibFaolan.csproj">
