--- a/src/Servers/GameServer/GameServer.csproj
+++ b/src/Servers/GameServer/GameServer.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -30,12 +30,13 @@
   <ItemGroup>
     <Reference Include="Scs, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\other\Scs.dll</HintPath>
+      <HintPath>..\..\Scs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GMCommands.cs" />
     <Compile Include="Packets\Send0x2000_Packets.cs" />
     <Compile Include="Packets\Handle0xf98e10b3.cs" />
     <Compile Include="Packets\HandleCommandPacket.cs" />
@@ -45,7 +46,9 @@
     <Compile Include="Packets\Handle0x2000.cs" />
     <Compile Include="Packets\Packets.cs" />
     <Compile Include="Packets\Send0x2000_SendSpawnNPCAndPlayersTest.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\..\LibFaolan\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Packets\Send0x200A.cs" />
     <Compile Include="Packets\Send0x201C.cs" />
     <Compile Include="SenderReceivers.cs" />
@@ -54,6 +57,10 @@
     <ProjectReference Include="..\..\LibFaolan\LibFaolan.csproj">
       <Project>{7f7d3248-4432-4e7b-9cfd-25982668ad5b}</Project>
       <Name>LibFaolan</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AgentServer\AgentServer.csproj">
+      <Project>{b5daaaa0-39b6-489e-8f9d-fdd24fff04d3}</Project>
+      <Name>AgentServer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
