Added SQLite Support

--- a/other/faolan.ini
+++ b/other/faolan.ini
@@ -15,10 +15,14 @@ GameServerPort=7014
 
 CharacterSlots=4
 
-MySqlAddress=127.0.0.1
-MySqlPort=3311
-MySqlDatabase=projectfaolan
-MySqlUsername=root
-MySqlPassword=root
+UseMySQL=0
+;MySqlAddress=127.0.0.1
+;MySqlPort=3311
+;MySqlDatabase=projectfaolan
+;MySqlUsername=root
+;MySqlPassword=root
+
+UseSQLite=1
+SQLitePath=../../other/projectfaolan.db
 
 WelcomeString=Welcome to Project Faolan!<br />Build on: $BuildDate$<br />Git rev: $BuildHash$
