--- a/src/Servers/GameServer/GameServer.csproj
+++ b/src/Servers/GameServer/GameServer.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -36,6 +36,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functions.cs" />
     <Compile Include="GMCommands.cs" />
     <Compile Include="Packets\Send0x2000_Packets.cs" />
     <Compile Include="Packets\Handle0xf98e10b3.cs" />
@@ -49,6 +50,7 @@
     <Compile Include="..\..\LibFaolan\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Packets\Send0x2000_SpawnPlayer.cs" />
     <Compile Include="Packets\Send0x200A.cs" />
     <Compile Include="Packets\Send0x201C.cs" />
     <Compile Include="SenderReceivers.cs" />
