Fixed teleporting, Use Log4Net for logging

--- a/other/faolan.ini
+++ b/other/faolan.ini
@@ -25,4 +25,4 @@ UseMySQL=0
 UseSQLite=1
 SQLitePath=../../other/projectfaolan.db
 
-WelcomeString=Welcome to Project Faolan!<br />Build on: $BuildDate$<br />Git rev: $BuildHash$
+WelcomeString=Welcome to Project Faolan!
