--- a/Faolan/Faolan.csproj
+++ b/Faolan/Faolan.csproj
@@ -1,92 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{79222BCD-5D5F-47A6-A84A-8E501CFA1520}</ProjectGuid>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Faolan</RootNamespace>
-    <AssemblyName>Faolan</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
+    <OutputPath>..\bin\$(Configuration)\</OutputPath>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Configurations>Debug</Configurations>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Faolan.Program</StartupObject>
+    <Authors>Project Faolan</Authors>
+    <PackageId>Faolan</PackageId>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
+    <ProjectReference Include="..\Faolan.Core\Faolan.Core.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AgentServer\AgentServerListener.cs" />
-    <Compile Include="AgentServer\AgentServerPacket.cs" />
-    <Compile Include="AgentServer\Functions.cs" />
-    <Compile Include="Arguments.cs" />
-    <Compile Include="CSPlayerAgent\CSPlayerAgentListener.cs" />
-    <Compile Include="GameServer\ActionIds.cs" />
-    <Compile Include="GameServer\Functions.cs" />
-    <Compile Include="GameServer\GameServerListener.cs" />
-    <Compile Include="GameServer\GMCommands.cs" />
-    <Compile Include="GameServer\Packets\Handle0x2000.cs" />
-    <Compile Include="GameServer\Packets\Handle0xf98e10b3.cs" />
-    <Compile Include="GameServer\Packets\HandleCommandPacket.cs" />
-    <Compile Include="GameServer\Packets\HandleNewCharacter.cs" />
-    <Compile Include="GameServer\Packets\Packets.cs" />
-    <Compile Include="GameServer\Packets\Send0x2000_Packets.cs" />
-    <Compile Include="GameServer\Packets\Send0x2000_SpawnPlayer.cs" />
-    <Compile Include="GameServer\Packets\Send0x200A.cs" />
-    <Compile Include="GameServer\Packets\Send0x201C.cs" />
-    <Compile Include="GameServer\SenderReceivers.cs" />
-    <Compile Include="GameServer\Tests.cs" />
-    <Compile Include="PlayerAgent\Packets.cs" />
-    <Compile Include="PlayerAgent\PlayerAgentListener.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UniverseAgent\Packets.cs" />
-    <Compile Include="UniverseAgent\UniverseAgentListener.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="MySql.Data">
-      <Version>8.0.13</Version>
-    </PackageReference>
-    <PackageReference Include="System.Data.SQLite">
-      <Version>1.0.109.2</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Faolan.Core\Faolan.Core.csproj">
-      <Project>{8f960929-5303-4947-909c-6d979d033f64}</Project>
-      <Name>Faolan.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
