--- a/Faolan.PacketAnalyzer/Faolan.PacketAnalyzer.csproj
+++ b/Faolan.PacketAnalyzer/Faolan.PacketAnalyzer.csproj
@@ -1,25 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
-    <OutputPath>..\bin\$(Configuration)\</OutputPath>
-    <DefineConstants>$(Configuration.ToUpper());TRACE</DefineConstants>
-    <BuildDate>$([System.DateTime]::UTCNow.ToString("HH:mm:ss dd-MM-yyyy"))</BuildDate>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net7.0-windows</TargetFramework>
+		<UseWPF>true</UseWPF>
+		<OutputPath>..\bin\$(Configuration)\</OutputPath>
+		<DefineConstants>$(Configuration.ToUpper());TRACE</DefineConstants>
+		<BuildDate>$([System.DateTime]::UTCNow.ToString("HH:mm:ss dd-MM-yyyy"))</BuildDate>
+	</PropertyGroup>
 
-  <PropertyGroup>
-    <Authors>Project Faolan</Authors>
-    <PackageId>Faolan.PacketAnalyzer</PackageId>
-    <Version>0.1.0</Version>
-    <Description>$(BuildDate)</Description>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Authors>Project Faolan</Authors>
+		<PackageId>Faolan.PacketAnalyzer</PackageId>
+		<Version>0.1.0</Version>
+		<Description>$(BuildDate)</Description>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Faolan.Core\Faolan.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Faolan.Core\Faolan.Core.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="SharpZipLib" Version="1.3.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="SharpPcap" Version="6.2.5" />
+		<PackageReference Include="SharpZipLib" Version="1.4.2" />
+	</ItemGroup>
 </Project>
